Fix link jumping when clicking links in dropdown

--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -134,6 +134,10 @@
     margin: 3px;
 }
 
+.dropdown-menu li a {
+    cursor: pointer;
+}
+
 /** Lightbox **/
 
 .lightbox {
